2005-06-03  Alan Modra  <amodra@bigpond.net.au>

	PR 568
	* elf32-i386.c (elf_i386_relocate_section): Handle zero symndx
	for all reloc types.

	Apply from mainline:
	2005-05-12  H.J. Lu  <hongjiu.lu@intel.com>
	* elf32-i386.c (elf_i386_relocate_section): Allow R_386_GOTOFF
	against protected function when building executable.

2005-06-03  Alan Modra  <amodra@bigpond.net.au>

	* elf64-ppc.c (add_symbol_adjust): Set sym visibility to most
	restrictive of func code and func descr for undefined syms as well
	as defined.

2005-05-29  Daniel Jacobowitz  <dan@codesourcery.com>

	Backport from mainline:
	2005-05-29  Jakub Jelinek  <jakub@redhat.com>
	* elfcode.h (elf_object_p): Fail if e_shoff != 0, e_shnum == 0 and
	first shdr has sh_size == 0.  Fail if e_shnum is large to cause
	arithmetic overflow when allocating the i_shdr array.
	Sanity check sh_link and sh_info fields.  Fix e_shstrndx sanity check.

	2005-05-18  H.J. Lu  <hongjiu.lu@intel.com>
	* elf.c (group_signature): Undo the last change. Check if the
	symbol table section is correct.

	2005-05-17  Nick Clifton  <nickc@redhat.com>
	* elf.c (group_signature): Check for a group section which is
	actually a (corrupt) symbol table section in disguise and prevent
	an infinite loop from occurring.

	2005-05-17  Tavis Ormandy <taviso@gentoo.org>
	* elf.c (bfd_section_from_shdr): Add sanity check when parsing
	dynamic sections.

	2005-05-09  Alan Modra  <amodra@bigpond.net.au>
	* elfcode.h (elf_object_p): Add more sanity checks on elf header.

2005-05-28  David Daney  <ddaney@avtrex.com>

	* elfxx-mips.c (_bfd_mips_elf_finish_dynamic_sections):  Move
	calculation of DT_RELSZ to occur after all dynamic relocations
	are created.

2005-05-26  Mark Kettenis  <kettenis@gnu.org>
            Maciej W. Rozycki  <macro@linux-mips.org>

	* elfxx-mips.c (_bfd_mips_elf_section_processing): Warn and
	stop processing of options if one of invalid size is
	encountered.
	(_bfd_mips_elf_section_from_shdr): Likewise.