@@ -1,3 +1,8 @@
+2005-06-06  Alan Modra  <amodra@bigpond.net.au>
+
+	* emultempl/ppc64elf.em (ppc_before_allocation): Always run
+	ppc64_elf_edit_opd.
+
 2005-04-12  Alan Modra  <amodra@bigpond.net.au>
 
 	* emultempl/elf32.em (gld${EMULATION_NAME}_stat_needed): Ignore
